Avoid use of grid-gap: 20px; bc it is not supported on mobile safari
- While this wont show up on iphone bc they're all in a single column anyway, it does show up on iPad bc they're multicolumn

--- a/src/assets/scss/stepStyle.scss
+++ b/src/assets/scss/stepStyle.scss
@@ -3,7 +3,13 @@
 #app .card-container {
   display: flex;
   flex-flow: wrap;
-  grid-gap: 20px;
+  > *:not(:last-child) {
+    margin-bottom: 20px;
+  }
+}
+
+#app .v_card__text {
+  padding-bottom: 0px !important;
 }
 
 #app .v-stepper__content {
